Added a Region Visualiser, extra Recipes, updated world datasource with test generator, Holograms, Region Crystal item
* Anvil now fully functional
* Enchanting Table improved a bit
* VIP changed to VIB
* VIB can fly in their own regions
* Added Piston Region Flag
* Modified mob exp and coin drop flag to be default 75% when inside a Player Region
* Purchase Options can now have a grey subtext
* Pay To Win Enchant lore
* Fixed the stats of the Rose Gold set
* Set Runic Capacity for most items
* Updated Region Capsule code to work properly
* Changed Nonnull to NotNull in Command classes
* /sethome now has a warning
* Fixed Pay To Win sweeping damage issue
* Fixed PersistentLoreBuilder skipping the next character when using '\n'
* Fixed Player Scoreboard vanishing when relogging
* PlayerProfile now has a myWarps and visualedRegions map
* Added Flight, Region Warning and Region Boundaries player settings.
* Nerfed Region Count for Newbeans to 1.
* Fixed Tracking Datasource from adding the previous total value with the new total value, creating invalid counts and long limit breaks.
* Fixed being able to rename Region Crystals.
* Fixed a null issue with custom big chests.